# WooCommerce-AI-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt  test_llm.py  woocommerce_client.py  woocommerce_tools.py
agents/: action_agent.py  analytics_agent.py  analytics_node.py  business_agent.py  ceo_agent.py  inventory_agent.py  marketing_agent.py  memory_agent.py  reflection_agent.py  router_agent.py  router_node.py  supervisor_agent.py  support_agent.py
auth/: dependencies.py  hashing.py  jwt_handler.py
config/: llm.py
context/: current_user.py  request_context.py
database/: database.py  requirements.txt
docs/: faq.txt  return_policy.txt  shipping_policy.txt
graphs/: action_graph.py  customer_support_graph.py  intelligent_graph.py  router.py  store_graph.py
memory/: memory.json  memory_manager.py
models/: store.py  user.py
rag/: ingest.py  rag_chain.py  retriever.py
routes/: auth_routes.py  chat_routes.py  store_routes.py  test_routes.py
schemas/: auth_schema.py  chat_schema.py  store_schema.py
services/: analytics_service.py  chat_service.py  coupon_service.py  dashboard_service.py  inventory_service.py  memory_service.py  order_service.py  product_service.py  store_service.py  woocommerce_service.py
state/: approval_state.py  default_state.py  store_state.py
woocommerce_local/: client.py  service.py
