[project]
name = "woocommerce-store-assistant"
version = "0.1.0"
description = "AI-powered WooCommerce Store Assistant using LangGraph, LangChain, and RAG"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langgraph==1.0.10",
    "langgraph-prebuilt==1.0.10",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "faiss-cpu",
    "langchain-huggingface",
    "python-dotenv",
    "woocommerce",
    "gradio",
    "pypdf",
    "openai",
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools]
packages = [
    "agents",
    "graphs",
    "memory",
    "rag",
    "state"
]
